# src/controller/vetsis.js
@@ -1,14 +1,0 @@
-const dao = require('../dao/mongoDBDao');
-
-const availableCustomersController = () => dao.availableCustomers();
-
-const newCustomerController = (customer) => {
-  const promise = (resolve, reject) => {
-    dao.storeCustomer(customer).then(() => resolve(), err => reject(err));
-  }
-  return new Promise(promise);
-}
-module.exports = {
-  availableCustomersController,
-  newCustomerController,
-};
